force-app/main/default/objects/ks_pmj_base__Survey__c/ks_pmj_base__Survey__c.object-meta.xml
<CustomObject>
    <label>アンケート</label>
    <nameField>
        <displayFormat>SVY-{00000}</displayFormat>
        <label>管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>