force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__D01__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__D01__c</fullName>
    <inlineHelpText>理解が不足していた内容や追加で説明が必要な事項をご記載ください</inlineHelpText>
    <label>理解が不足していた内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>