force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__D02__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__D02__c</fullName>
    <inlineHelpText>会議進行についてご要望があればご記載ください</inlineHelpText>
    <label>進め方についての要望</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>