force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__D03__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__D03__c</fullName>
    <inlineHelpText>その他、会議、プロジェクト進行に対するリクエストがあればご記載ください</inlineHelpText>
    <label>その他ご要望</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>