force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__Q01__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Q01__c</fullName>
    <label>今回の会議に対する理解度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.充分理解できた</fullName>
            </value>
            <value>
                <fullName>4.ほとんど理解できた</fullName>
            </value>
            <value>
                <fullName>3.問題ないレベルに理解できた</fullName>
            </value>
            <value>
                <fullName>2.一部理解が不足している</fullName>
            </value>
            <value>
                <fullName>1.まったく理解できなかった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>