force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__Q02__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Q02__c</fullName>
    <label>担当コンサルタントの説明</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.非常にわかりやすかった</fullName>
            </value>
            <value>
                <fullName>4.わかりやすかった</fullName>
            </value>
            <value>
                <fullName>3.内容は理解できた</fullName>
            </value>
            <value>
                <fullName>2.一部説明が不足していた</fullName>
            </value>
            <value>
                <fullName>1.説明が不足しており内容が理解できない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>