force-app/main/default/objects/ks_pmj_base__Survey__c/fields/ks_pmj_base__Q03__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Q03__c</fullName>
    <label>会議進行</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.内容が明確化されておりスムーズに進行した</fullName>
            </value>
            <value>
                <fullName>4.スムーズに進行はした</fullName>
            </value>
            <value>
                <fullName>3.問題なく進行はした</fullName>
            </value>
            <value>
                <fullName>2.進行が滞りがちだった</fullName>
            </value>
            <value>
                <fullName>1.まったく進捗したと感じられない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>