force-app/main/default/objects/ks_pmj_base__Survey__c/listViews/ks_pmj_base__All.listView-meta.xml
<ListView>
    <fullName>ks_pmj_base__All</fullName>
    <columns>NAME</columns>
    <columns>ks_pmj_base__Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>